bugfix: unhandled error when typing into autocomple cells (issue #203); rewrite autocompleteEditor to wrap around unmodified bootstrap-typeahead.js 2.1.1; also fixes #186 and #197

--- a/demo/css/samples.css
+++ b/demo/css/samples.css
@@ -72,6 +72,10 @@ body {
   padding-bottom: 450px;
 }
 
+.pad.bottomSpace550 {
+  padding-bottom: 550px;
+}
+
 .pad.bottomSpace650 {
   padding-bottom: 650px;
 }
